Gap fix

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -785,7 +785,7 @@ span {
     color: var(--main-color);
     text-decoration: none;
     transition: 0.3s ease;
-    font-size: 1.3rem;
+    font-size: 1.8rem;
 }
 
 .project-links a:hover {
